# flowspec

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  parse_tlasm.py  pyproject.toml  run_suite.py
.github/workflows/: build-vscode-extension.yml  publish-tlc-image.yml
docker/tlc/: Dockerfile  README.md
docs/: ai-authoring-guide.md  product-direction.md  user-guide.md
docs/presentations/: flow-spec-ai-formal-design.md
examples/: 2pc.fspec  Account.cfg  Payment.cfg  TwoPhaseCommit.cfg  WalletTopup.cfg  account.fspec  payment.fspec  transaction.fspec  wallet_topup.fspec
examples/capability/: ProgressBilling.cfg  progress_billing.fspec  progress_billing.out.txt
examples/research/: README.md  paxos.fspec
examples/tutorial/: DeceptiveDoublePostFixed.cfg  deceptive_double_post_bad.fspec  deceptive_double_post_bad.out.txt  deceptive_double_post_fixed.fspec
extension/: .vscodeignore  README.md  package.json
extension/src/: extension.js
extension/syntaxes/: flowspec.tmLanguage.json
flowspec/: __init__.py  benchmark.py  cli.py  compiler.py  grammar.lark  ir.py  narrator.py  parser.py  suite.py  tree_utils.py  validator.py
flowspec/backends/: tla.py
tests/: test_examples.py
